<resources>
    <string name="app_name">Piskotnik</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="URL_base">https://piskonik-online.azurewebsites.net</string>
    <string name="network_error">Error when using network.</string>
    <string name="service_error">Error connecting to service.</string>
    <string name="search_fill">Search...</string>
    <string name="action_search_name">Search by recipe name</string>
    <string name="action_search_ingrediens">Search by ingredients</string>
    <string name="prompt_recipe_name">Recipe name</string>
    <string name="prompt_recipe_text">Say something about the recipe</string>
    <string name="action_add_ingredient">+</string>
    <string name="action_add_recipe">add new recipe</string>
    <string name="prompt_ingredient_name">ingredient name</string>
    <string name="prompt_ingredient_amount">amount</string>
    <string name="prompt_ingredient_unit">unit</string>
    <string name="image_description">Cookie image</string>
</resources>